Prevent text wrap on sidebar
Line up left edge of text to prevent jagged edge due to differences in
icon width.

--- a/gui/velociraptor/src/themes/coolgray-dark.css
+++ b/gui/velociraptor/src/themes/coolgray-dark.css
@@ -255,14 +255,6 @@ body.coolgray-dark {
   top: 72px;
 }
 
-.coolgray-dark #navigator.uncollapsed {
-  width: 220px;
-}
-
-.coolgray-dark .nav-pills {
-  width: 220px;
-}
-
 .coolgray-dark .nav-pills .nav-link {
   font-family: var(--font-family-sans-serif);
   font-size: var(--font-size-small);
@@ -289,9 +281,19 @@ body.coolgray-dark {
   color: var(--color-sidebar-foreground-disabled);
 }
 
-.coolgray-dark .navicon {
-  margin-right: 16px;
+.coolgray-dark .nav-link span {
+  width: 18px;
+  margin-right: 10px;
+  display: inline-block;
   font-size: var(--font-size-small);
+}
+
+.coolgray-dark .nav-link {
+  line-break: anywhere;
+}
+
+.coolgray-dark .navicon {
+  margin-right: 0px;
 }
 
 /* Buttons */
